--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2021"
 rust-version = "1.83"
 
 [dependencies]
+clap = { version = "4.5.23", features = ["derive"] }
 itertools = "0.13.0"
 regex = "1.11.1"
