--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ rust-version = "1.83"
 
 [dependencies]
 clap = { version = "4.5.23", features = ["derive"] }
+indoc = "2.0.5"
 itertools = "0.13.0"
 regex = "1.11.1"
