--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ rust-version = "1.83"
 
 [dependencies]
 clap = { version = "4.5.23", features = ["derive"] }
-indoc = "2.0.5"
 itertools = "0.13.0"
 regex = "1.11.1"
+
+[dev-dependencies]
+indoc = "2.0.5"
