--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ rust-version = "1.83"
 clap = { version = "4.5.23", features = ["derive"] }
 gxhash = "3.4.1"
 itertools = "0.13.0"
+num = "0.4.3"
 regex = "1.11.1"
 
 [dev-dependencies]
