Upgrade to 2024 edition

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,9 @@
+cargo-features = ["edition2024"]
+
 [package]
 name = "advent-of-code"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 rust-version = "1.83"
 
 [dependencies]
